--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,9 @@
 @import 'base';
 
-@import '../js/custom_elements/app/app';
-@import '../js/custom_elements/app/progress-bar';
-@import '../js/custom_elements/chart/chart';
-@import '../js/custom_elements/location/location';
-@import '../js/custom_elements/photo/photo';
-@import '../js/custom_elements/ticks/ticks';
+@import '../js/components/app/app';
+@import '../js/components/app/progress-bar';
+@import '../js/components/chart/chart';
+@import '../js/components/location/location';
+@import '../js/components/photo/photo';
+@import '../js/components/ticks/ticks';
 
