--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @use 'base';
 
 @use '../js/components/app/app';
+@use '../js/components/app/intro';
 @use '../js/components/app/photo';
 @use '../js/components/app/progress-bar';
 @use '../js/components/chart/chart';
