consolidates files, removes folders (no-op)

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,9 @@
 @use 'base';
 
-@use '../js/components/app/app';
-@use '../js/components/app/intro';
-@use '../js/components/app/photo';
-@use '../js/components/app/progress-bar';
-@use '../js/components/chart/chart';
-@use '../js/components/location/location';
-@use '../js/components/ticks/ticks';
-
+@use 'app';
+@use 'intro';
+@use 'photo';
+@use 'progress-bar';
+@use 'chart';
+@use 'location';
+@use 'ticks';
